--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,19 @@ spring.servlet.multipart.max-request-size=10MB
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
+touch sonar-project.properties
+
+sonar.projectKey=policymanagement
+sonar.projectName=Policy Management
+sonar.projectVersion=1.0
+
+sonar.host.url=http://localhost:9000
+sonar.login=sqa_5db5d0361057a7cb366ea1f1ac4b1236f4255697
+
+sonar.sources=src
+sonar.language=java
+sonar.sourceEncoding=UTF-8
+sonar.java.binaries=target
+
+
 
